--- a/Cart.html
+++ b/Cart.html
@@ -10,7 +10,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.cycle2/2.1.6/jquery.cycle2.min.js"></script>
     <link rel="stylesheet" href="./CSS/Item.css">
     <link rel="stylesheet" href="./CSS/Home.css">
-    <title>Sản Phẩm</title>
+    <title>Giỏ hàng</title>
 </head>
 <body>
   <div class="container-fluid">
